# ptywright

./: .gitignore  README.md  pyproject.toml
skills/ptywright/: SKILL.md
src/ptybridge/: __init__.py  cli.py  server.py  transport.py
src/ptywright/: __init__.py  cli.py  server.py  snapshot.py  transport.py
tests/: test_install_skill.py  test_snapshot.py  test_transport.py
