# ptywright — a scriptable driver for interactive terminal programs on Windows.
#
# Standalone uv project (its own repo). Mirrors the trx-vital tools/ conventions:
# uv + Python 3.13, src layout, hatchling build, console script, ruff (ALL),
# pytest. Not a member of any workspace — it ships on its own.
[project]
name = "ptywright"
version = "0.1.0"
description = "A scriptable driver for interactive terminal programs on native Windows: launch a real shell/TUI inside a ConPTY, inject keystrokes, and read back output — over a dependency-light file-spool transport."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pywinpty>=2.0.13 ; sys_platform == 'win32'",  # ConPTY bindings (serve only)
    "pyte>=0.8.2",  # VT screen model for `snapshot` (render out.log into a screen grid)
]

[project.scripts]
ptywright = "ptywright.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptywright"]

# Ship the Claude Code skill inside the wheel so `ptywright install-skill` works after
# `uv tool install .` (in a source checkout it falls back to skills/ptywright/SKILL.md).
[tool.hatch.build.targets.wheel.force-include]
"skills/ptywright/SKILL.md" = "ptywright/_skill/SKILL.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14",
]

# --- Ruff (lint + format), aligned with trx-vital tools/ ----------------------
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "ANN",            # types encouraged, not enforced
    "COM812",         # formatter conflict
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D203", "D205", "D211", "D212", "D213", "D400", "D401", "D415",
    "EM101", "EM102", "TRY003",  # inline exception messages — small surface
    "G004", "PLR2004",
    "BLE001", "S110",  # the server deliberately swallows best-effort I/O errors
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"src/ptywright/cli.py" = ["T201", "PLC0415", "PLR0911", "PTH123", "C901", "SIM105"]
# serve() is one linear host loop; splitting it would hurt readability. open() over Path
# is deliberate (append handle held across the read loop).
"src/ptywright/server.py" = ["PLC0415", "PTH123", "C901", "PLR0912", "PLR0915", "PTH107", "SIM105", "TC001"]
# snapshot defers the pyte import so the stdlib-only commands run without it (like server/winpty).
"src/ptywright/snapshot.py" = ["PLC0415"]
"tests/*" = ["S101", "INP001", "T201", "PLC0415", "PT011", "S604"]
